--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-flip-card-game",
+  "name": "react-flip-card-game-update",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
